Separate minic and configure of containers phase1

--- a/build-home/Config.in
+++ b/build-home/Config.in
@@ -1,2 +1,1 @@
-# Add the external packaged you need to here
-source "$BR2_EXTERNAL_MINIC_CONTAINER_PATH/package/etcd/Config.in"
+containers/Config.in
