--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 build-home/.bash_history
 build-home/.buildroot-ccache/
-build-home/ccachebuildroot/
 build-home/configs/merged_defconfig
 build-home/output/
 build-home/buildroot/
+build-home/.viminfo
 
-containers/*/Dockerfile
-containers/*/rootfs.tar.gz
+containers/
